--- a/packages/migrations/package.json
+++ b/packages/migrations/package.json
@@ -64,6 +64,7 @@
         "@0x/base-contract": "^6.0.2",
         "@0x/contract-addresses": "^4.1.0",
         "@0x/contract-artifacts": "^3.2.0",
+        "@0x/contract-wrappers": "^13.2.0",
         "@0x/contracts-asset-proxy": "^3.0.2",
         "@0x/contracts-coordinator": "^3.0.2",
         "@0x/contracts-dev-utils": "^1.0.2",
